Changes header items font size and fixes bkg image to cover the entire page on mobile

--- a/src/containers/ComputingInfo/ComputingInfo.css
+++ b/src/containers/ComputingInfo/ComputingInfo.css
@@ -2,6 +2,7 @@
     background-image: url('../../assets/images/blue-room.jpg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 100vh;
     display: flex;
     justify-content: left;
