--- a/src/containers/ScienceInfo/ScienceInfo.css
+++ b/src/containers/ScienceInfo/ScienceInfo.css
@@ -2,6 +2,7 @@
     background-image: url('../../assets/images/deep-forest.jpg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 100vh;
     display: flex;
     justify-content: right;
