--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,98 @@
 :root {
-    font-family: 'Times New Roman';
-    
+  font-family: 'Times New Roman', Times, serif;
+
+  --fs-professions: 3rem;
+  --fs-location: 2rem;
+  --fs-profession-title-home: 10rem;
+  --fs-policy-links-footer: 1.2rem;
+  --fs-icons-footer: 2rem;
+  --fs-logo: 3.5rem;
+  --fs-name-header: 2rem;
+
+  --marg-home: calc(-8vh + -74px);
+
+  --bkg-color: black;
+  --tp-bkg-color: transparent;
+}
+
+@media screen and (min-width: 401px) and (max-width: 820px) {
+  :root {
     --fs-professions: 3rem;
     --fs-location: 2rem;
-    --fs-profession-title-home: 10rem;
-    --fs-policy-links-footer: 1.2rem;
-    --fs-icons-footer: 2rem;
+    --fs-profession-title-home: 8rem;
+    --fs-policy-links-footer: 1rem;
+    --fs-icons-footer: 1.3rem;
+  }
 
-    --bkg-color: black;
-    --tp-bkg-color: transparent;
+  .footer__container {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: 2;
+    grid-template-rows: 1;
+  }
+
+  .policy__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+
+  .copyright-host, .privacy-cookie {
+    padding: 5px 0;
+  }
+
+  .all-links__container {
+    grid-area: 1 / 2 / span 2 / span 1;
+  }
+
+  .social-media-icons__container {
+    grid-area: 2 / 1 / span 1 / span 1;
+  }
 }
 
-@media screen and (max-width: 820px) {
-    :root {
-        --fs-professions: 3rem;
-        --fs-location: 2rem;
-        --fs-profession-title-home: 8rem;
-        --fs-policy-links-footer: 1rem;
-        --fs-icons-footer: 1.3rem;
-    }
-    .footer__container {
-        display: grid;
-        justify-content: space-around;
-        grid-template-columns: 2;
-        grid-template-rows: 1;
-    }
+@media screen and (max-width: 400px) {
+  :root {
+    --fs-professions: 1.8rem;
+    --fs-location: 1.5rem;
+    --fs-profession-title-home: 4.5rem;
+    --fs-policy-links-footer: 0.8rem;
+    --fs-icons-footer: 0.9rem;
+    --fs-logo: 2.5rem;
+    --fs-name-header: 1.5rem;
 
-    .policy__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        grid-area: 1 / 1 / span 1 / span 1;
-        justify-content: center;
-    }
+    --marg-home: calc(-8vh + -54px);
+  }
 
-    .all-links__container {
-        grid-area: 1 / 2 / span 2 / span 1;
-    }
+  .footer__container {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: 2;
+    grid-template-rows: 2;
+  }
 
-    .social-media-icons__container {
-        grid-area: 2 / 1 / span 1 / span 1;
-    }
-}
+  .policy__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
 
-@media screen and (max-width: 390px) {
-    :root {
-        --fs-professions: 1.8rem;
-        --fs-location: 1.5rem;
-        --fs-profession-title-home: 4.5rem;
-    }
+  .copyright-host, .privacy-cookie {
+    padding: 5px 0;
+  }
+
+  .all-links__container {
+    grid-area: 1 / 2 / span 1 / span 1;
+  }
+
+  .social-media-icons__container {
+    grid-area: 2 / 1 / span 1 / span 2;
+  }
+
+  .social-icon {
+    padding: 25px 5px;
+  }
 }
